macro/tests/fail/square_brackets.stderr
error: expected curly braces
 --> $DIR/square_brackets.rs:3:21
  |
3 | #[parameterized(v = [1, 2, 3])]
  |                     ^^^^^^^^^
